--- a/index.html
+++ b/index.html
@@ -55,15 +55,63 @@
 			</div>
 		</section>
 
-		<!-- Try It Free Build The Community Your Fans Will Love  Get
-		Started For Free Grow Together Generate meaningful discussions with your
-		audience and build a strong, loyal community. Think of the insightful
-		conversations you miss out on with a feedback form. Flowing Conversations
-		You wouldn't paginate a conversation in real life, so why do it online? Our
-		threads have just-in-time loading for a more natural flow. Your Users It
-		takes no time at all to integrate Huddle with your app's authentication
-		solution. This means, once signed in to your app, your users can start
-		chatting immediately. Ready To Build Your Community? Get Started For Free
+		<section class="main">
+			<div class="container">
+				<div class="main__content">
+					<div class="main__content-cards">
+						<div class="main__content-card">
+							<div class="main__content-card-body">
+								<p class="title">Grow Together</p>
+								<p class="body">
+									Generate meaningful discussions with your audience and build a
+									strong, loyal community. Think of the insightful conversations
+									you miss out on with a feedback form.
+								</p>
+							</div>
+							<div class="main__content-card--img">
+								<img src="/images/illustration-grow-together.svg" alt="" />
+							</div>
+						</div>
+						<div class="main__content-card">
+							<div class="main__content-card--img">
+								<img
+									src="/images/illustration-flowing-conversation.svg"
+									alt=""
+								/>
+							</div>
+							<div class="main__content-card-body">
+								<p class="title">Flowing Conversations</p>
+								<p class="body">
+									You wouldn't paginate a conversation in real life, so why do
+									it online? Our threads have just-in-time loading for a more
+									natural flow.
+								</p>
+							</div>
+						</div>
+						<div class="main__content-card">
+							<div class="main__content-card-body">
+								<p class="title">Your Users</p>
+								<p class="body">
+									It takes no time at all to integrate Huddle with your app's
+									authentication solution. This means, once signed in to your
+									app, your users can start chatting immediately.
+								</p>
+							</div>
+							<div class="main__content-card--img">
+								<img src="/images/illustration-your-users.svg" alt="" />
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!--
+
+
+
+
+		Ready To Build Your Community? Get Started For Free
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua +1-543-123-4567
 		example@huddle.com About Us What We Do FAQ Career Blog Contact Us &copy;
