Working on footer

--- a/index.html
+++ b/index.html
@@ -106,14 +106,46 @@
 			</div>
 		</section>
 
+		<section class="footer">
+			<div class="container">
+				<div class="footer__cta">
+					<p>Ready To Build Your Community?</p>
+					<div class="footer__cta-button">Get Started For Free</div>
+				</div>
+
+				<div class="footer__main">
+					<div class="col-4">
+						<div class="footer__col-4--logo">
+							<img src="/images/logo-white.png" alt="" />
+						</div>
+						<div class="footer__col-4--contact">
+							<div class="row contact__address">
+								<span class="icon"
+									><i class="fas fa-map-marker-alt"></i> Lorem ipsum dolor sit
+									amet, consectetur adipiscing elit, sed do eiusmod tempor
+									incididunt ut labore et dolore magna aliqua</span
+								>
+							</div>
+							<div class="row conact__phone">
+								<span class="icon"><i class="fas fa-phone-alt"></i></span>
+								+1-543-123-4567
+							</div>
+							<div class="row conact__email">
+								<span class="icon"><i class="fas fa-envelope"></i></span>
+								+1-543-123-4567
+							</div>
+						</div>
+					</div>
+					<div class="col-4">About</div>
+					<div class="col-4">Career</div>
+					<div class="col-4">Socails</div>
+				</div>
+			</div>
+		</section>
+
 		<!--
 
 
-
-
-		Ready To Build Your Community? Get Started For Free
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua +1-543-123-4567
 		example@huddle.com About Us What We Do FAQ Career Blog Contact Us &copy;
 		Copyright 2018 Huddle. All rights reserved. -->
 
